--- a/style.css
+++ b/style.css
@@ -46,9 +46,6 @@ input {
 
 .background-wrapper {
   background: radial-gradient(circle at top left, rgba(0, 153, 255, 0.2), transparent 50%), radial-gradient(circle at bottom right, rgba(0, 0, 50, 0.4), transparent 60%), linear-gradient(to bottom right, #0c1a2b, #091d2f);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center center;
   max-width: 750px;
   margin: auto;
 }
@@ -62,7 +59,7 @@ input {
   position: relative;
 }
 .logo p {
-  color: var(--InfoStyleFg);
+  color: var(--ItemStyleBg);
   position: absolute;
 }
 .nav-links {
